# fastapi-recover-password-by-email

./: .env.example  Pipfile  README.md  pyproject.toml
alembic/: env.py
app/: main.py
app/config/: __init__.py  app_config.py  auth_config.py  database_config.py  mail_config.py
app/data/: __init__.py  types.py
app/data/exceptions/: __init__.py  duplicate_entry.py  invalid_credentials.py  invalid_token.py  no_result_found.py
app/data/models/: user.py
app/data/schemas/: __init__.py  user_schema.py
app/data/view_objects/: __init__.py  auth_vo.py  user_vo.py
app/html/email/: send_reset_password_email.html
app/infra/email/: __init__.py  base_email.py  send_reset_password_email.py
app/infra/repositories/: __init__.py  base_repository.py  user_repository.py
app/presentation/: __init__.py
app/presentation/dependencies/: auth_user.py
app/presentation/exception_handlers/: __init__.py  duplicate_entry_handler.py  invalid_credentials_handler.py  invalid_token_handler.py  no_result_found_handler.py
app/presentation/middlewares/: __init__.py  cors_middleware.py  db_middleware.py
app/presentation/routes/: __init__.py  _responses.py  auth_router.py  user_router.py
app/usecases/: auth_usecase.py
app/utils/: __init__.py  argon2_hasher.py  jwt_tokenizer.py
